...
                        backgroundColor: WidgetStateProperty.all(ghostColor),
                        shape: WidgetStateProperty.all<RoundedRectangleBorder>(
                            RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(10),
                        ))),
                    child: const Text(
                      'Entra',
                      style: TextStyle(color: surfaceVariantColor),
                    )),
                const SizedBox(height: 20),
                ElevatedButton(
                    onPressed: () {
                      Navigator.pushNamed(context, REGISTRATION_ROUTE);
...
