...
        }

        return SignInResponse(user: fitropeUser, error: "");
      }

      store.dispatch(FinishLoadingAction());
      return SignInResponse(error: "Email o password sbagliati");
    }
  } on FirebaseAuthException catch (e) {
    if (e.code == 'user-not-found') {
      print('No user found for that email.');
    } else if (e.code == 'wrong-password') {
      print('Wrong password provided.');
...
