...
    );
  }

  void showToggleUserStatusDialog(FitropeUser user) {
    final isCurrentlyActive = user.isActive;
    final action = isCurrentlyActive ? 'disattivare' : 'attivare';
    final actionPast = isCurrentlyActive ? 'disattivato' : 'attivato';
    
    showDialog(
      context: context,
      builder: (context) {
        return AlertDialog(
          backgroundColor: backgroundColor,
...
