...
              width: 200,
            ),
            Column(
              crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                ElevatedButton(
                  key: const Key('welcome-login-button'),
                  onPressed: () {
                    Navigator.pushNamed(context, LOGIN_ROUTE);
                  },
                  style: ButtonStyle(
                    backgroundColor: WidgetStateProperty.all(ghostColor),
                    shape: WidgetStateProperty.all<RoundedRectangleBorder>(
...
